--- a/package.json
+++ b/package.json
@@ -28,6 +28,24 @@
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
+	"dependencies": {
+		"@prisma/client": "^3.11.1",
+		"axios": "^0.26.1",
+		"config": "^3.3.7",
+		"cors": "^2.8.5",
+		"dotenv": "^16.0.0",
+		"express": "^4.17.3",
+		"helmet": "^5.0.2",
+		"hpp": "^0.2.3",
+		"moment": "^2.29.2",
+		"morgan": "^1.10.0",
+		"morgan-json": "^1.1.0",
+		"uuid": "^8.3.2",
+		"winston": "^3.6.0",
+		"winston-daily-rotate-file": "^4.7.1",
+		"xml2js": "^0.4.23",
+		"yup": "^0.32.11"
+	},
 	"devDependencies": {
 		"@commitlint/cli": "^16.2.3",
 		"@commitlint/config-conventional": "^16.2.1",
@@ -43,6 +61,7 @@
 		"@types/morgan-json": "^1.1.0",
 		"@types/node": "^17.0.23",
 		"@types/uuid": "^8.3.4",
+		"@types/xml2js": "^0.4.11",
 		"@types/yup": "^0.29.13",
 		"@typescript-eslint/eslint-plugin": "^5.17.0",
 		"@typescript-eslint/parser": "^5.17.0",
@@ -65,23 +84,6 @@
 		"ts-node": "^10.7.0",
 		"ts-node-dev": "^1.1.8",
 		"typescript": "^4.6.3"
-	},
-	"dependencies": {
-		"@prisma/client": "^3.11.1",
-		"axios": "^0.26.1",
-		"config": "^3.3.7",
-		"cors": "^2.8.5",
-		"dotenv": "^16.0.0",
-		"express": "^4.17.3",
-		"helmet": "^5.0.2",
-		"hpp": "^0.2.3",
-		"moment": "^2.29.2",
-		"morgan": "^1.10.0",
-		"morgan-json": "^1.1.0",
-		"uuid": "^8.3.2",
-		"winston": "^3.6.0",
-		"winston-daily-rotate-file": "^4.7.1",
-		"yup": "^0.32.11"
 	},
 	"lint-staged": {
 		"*.ts": "eslint --fix"
