--- a/package.json
+++ b/package.json
@@ -37,10 +37,11 @@
 		"express": "^4.17.3",
 		"helmet": "^5.0.2",
 		"hpp": "^0.2.3",
+		"lodash": "^4.17.21",
 		"moment": "^2.29.2",
 		"morgan": "^1.10.0",
 		"morgan-json": "^1.1.0",
-		"uuid": "^8.3.2",
+		"nanoid": "^4.0.0",
 		"winston": "^3.6.0",
 		"winston-daily-rotate-file": "^4.7.1",
 		"xml2js": "^0.4.23",
@@ -55,6 +56,7 @@
 		"@types/hpp": "^0.2.2",
 		"@types/jest": "^27.4.1",
 		"@types/jsonwebtoken": "^8.5.8",
+		"@types/lodash": "^4.14.182",
 		"@types/md5": "^2.3.2",
 		"@types/moment": "^2.13.0",
 		"@types/morgan": "^1.9.3",
