refactor: fix errors

--- a/package.json
+++ b/package.json
@@ -1,24 +1,23 @@
 {
 	"name": "starter-express",
 	"version": "1.2.0",
-	"description": "",
-	"main": "index.js",
+	"description": "Starter express boilerplate for AirtelTigo",
+	"main": "src/server.ts",
 	"scripts": {
 		"start": "node build/src/server.js",
 		"build": "npm run cleanup && npm run format && tsc --pretty",
 		"dev": "ts-node-dev --respawn --transpile-only src/server.ts",
-		"cleanup": "rm -fr build && rm -fr logs",
+		"cleanup": "rm -fr build",
+		"cleanup:all": "rm -fr build && rm -fr logs",
 		"db:pull": "prisma db pull && prisma generate",
 		"db:push": "prisma db push && prisma generate",
-		"format": "npm run lint && npm run prettier",
-		"lint": "npm run lint:check && npm run lint:fix",
+		"format": "npm run lint:fix && npm run prettier:fix",
 		"lint-staged": "lint-staged",
-		"lint:check": "eslint . --ext .ts",
-		"lint:fix": "eslint . --ext .ts",
+		"lint:check": "eslint src",
+		"lint:fix": "eslint --fix src",
 		"prepare": "husky install",
-		"prettier": "npm run prettier:check && npm run prettier:fix",
-		"prettier:check": "prettier --check .",
-		"prettier:fix": "prettier --write .",
+		"prettier:check": "prettier --check src",
+		"prettier:fix": "prettier --write src",
 		"pretty-quick": "pretty-quick --staged",
 		"release": "standard-version",
 		"test": "jest",
@@ -41,7 +40,7 @@
 		"moment": "^2.29.2",
 		"morgan": "^1.10.0",
 		"morgan-json": "^1.1.0",
-		"nanoid": "^4.0.0",
+		"nanoid": "^3.3.4",
 		"winston": "^3.6.0",
 		"winston-daily-rotate-file": "^4.7.1",
 		"xml2js": "^0.4.23",
@@ -69,8 +68,6 @@
 		"@typescript-eslint/parser": "^5.17.0",
 		"cz-conventional-changelog": "^3.3.0",
 		"eslint": "^8.12.0",
-		"eslint-config-airbnb-base": "^15.0.0",
-		"eslint-config-airbnb-typescript": "^16.2.0",
 		"eslint-config-node": "^4.1.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-node": "^11.1.0",
