--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,10 @@
 {
 	"tabWidth": 2,
 	"useTabs": true,
-	"printWidth": 100,
+	"printWidth": 80,
 	"semi": true,
 	"singleQuote": true,
-	"trailingComma": "es5",
+	"trailingComma": "all",
 	"bracketSpacing": true,
 	"proseWrap": "always",
 	"endOfLine": "auto"
