--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
 		"dev": "ts-node-dev --respawn --transpile-only src/server.ts",
 		"cleanup": "rm -fr build",
 		"cleanup:all": "rm -fr build && rm -fr logs",
-		"db:pull": "prisma db pull && prisma generate",
-		"db:push": "prisma db push && prisma generate",
 		"format": "npm run lint:fix && npm run prettier:fix",
 		"lint-staged": "lint-staged",
 		"lint:check": "eslint src",
@@ -28,7 +26,6 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"@prisma/client": "^3.11.1",
 		"axios": "^0.26.1",
 		"config": "^3.3.7",
 		"cors": "^2.8.5",
@@ -36,15 +33,13 @@
 		"express": "^4.17.3",
 		"helmet": "^5.0.2",
 		"hpp": "^0.2.3",
-		"lodash": "^4.17.21",
 		"moment": "^2.29.2",
 		"morgan": "^1.10.0",
 		"morgan-json": "^1.1.0",
 		"nanoid": "^3.3.4",
 		"winston": "^3.6.0",
 		"winston-daily-rotate-file": "^4.7.1",
-		"xml2js": "^0.4.23",
-		"yup": "^0.32.11"
+		"xml2js": "^0.4.23"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^16.2.3",
@@ -54,16 +49,11 @@
 		"@types/express": "^4.17.13",
 		"@types/hpp": "^0.2.2",
 		"@types/jest": "^27.4.1",
-		"@types/jsonwebtoken": "^8.5.8",
-		"@types/lodash": "^4.14.182",
-		"@types/md5": "^2.3.2",
-		"@types/moment": "^2.13.0",
 		"@types/morgan": "^1.9.3",
 		"@types/morgan-json": "^1.1.0",
 		"@types/node": "^17.0.23",
 		"@types/uuid": "^8.3.4",
 		"@types/xml2js": "^0.4.11",
-		"@types/yup": "^0.29.13",
 		"@typescript-eslint/eslint-plugin": "^5.17.0",
 		"@typescript-eslint/parser": "^5.17.0",
 		"cz-conventional-changelog": "^3.3.0",
@@ -77,7 +67,6 @@
 		"lint-staged": "^12.3.7",
 		"prettier": "^2.6.2",
 		"pretty-quick": "^3.1.3",
-		"prisma": "^3.11.1",
 		"standard-version": "^9.3.2",
 		"ts-jest": "^27.1.4",
 		"ts-node": "^10.7.0",
