--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@types/axios": "^0.14.0",
 		"axios": "^0.26.1",
-		"config": "^3.3.7",
+		"config": "^3.3.9",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.0",
 		"express": "^4.17.3",
@@ -53,7 +54,7 @@
 		"@types/morgan-json": "^1.1.0",
 		"@types/node": "^17.0.23",
 		"@types/uuid": "^8.3.4",
-		"@types/xml2js": "^0.4.11",
+		"@types/xml2js": "^0.4.14",
 		"@typescript-eslint/eslint-plugin": "^5.17.0",
 		"@typescript-eslint/parser": "^5.17.0",
 		"cz-conventional-changelog": "^3.3.0",
